--- a/src/Components/wallPaper.css
+++ b/src/Components/wallPaper.css
@@ -1,20 +1,17 @@
 .wallpaper{
-    position: absolute;
-    left: 20.14%;
-    right: -0.25%;
-    top: -0.26%;
-    bottom: 30.15%;
-    /* width: 1285px; */
-     /* height: 800px; */
+    position: relative;
+    left: 6.14%;
+    top: -2.26%;
+    width: 100%;
+    height: 92%;
 }
 
 .rectangle{
     position: absolute;
-    width: 550px;
-    height: 515px;
-    left: 506px;
-    top: 113px;
-
+    width: 38.1%;
+    height: 64.8%;
+    left: 26.5%;
+    top: 14.1%;
     background: #FFFFFF;
     box-shadow: 0px 20px 40px rgba(238, 77, 71, 0.1);
     border-radius: 10px;
